DX-145 исправлен маппинг чата в дто